implementacin simple primer space de pagina

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -1,1 +1,32 @@
-<p>about-me works!</p>
+<body>
+    <div id="mainBar">
+        <h3>About Me</h3>
+        <h3>Services</h3>
+        <h3>Blog</h3>
+    </div>
+
+    <div class="spaces">
+        <div id="imagen">
+            <img src="../../../assets/images/me.png">
+        </div>
+        <div id="space1">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia error, ex aliquam accusantium ipsa numquam praesentium reiciendis corporis aliquid? Non vero quasi illum a at maxime tempora enim quae molestias?</p>
+        </div>
+    </div>
+
+    <div class="spaces">
+        space
+        <div id="space2">space2</div>
+    </div>
+
+    <div class="spaces">
+        space
+        <div id="space3">space3</div>
+    </div>
+
+    <div class="spaces">
+        space
+        <div id="space4">space4</div>
+    </div>
+
+</body>
