agregacion de Angular Material y Reestructuracion

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -1,32 +1,46 @@
 <body>
     <div id="mainBar">
+        <h3>Home</h3>
         <h3>About Me</h3>
-        <h3>Services</h3>
-        <h3>Blog</h3>
+        <h3>My Services</h3>
+        <h3>Conocimientos</h3>
+        <h3>Contacto</h3>
     </div>
 
-    <div class="spaces">
-        <div id="imagen">
-            <img src="../../../assets/images/me.png">
-        </div>
-        <div id="space1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia error, ex aliquam accusantium ipsa numquam praesentium reiciendis corporis aliquid? Non vero quasi illum a at maxime tempora enim quae molestias?</p>
-        </div>
-    </div>
+    <!--SECCION DE HOME-->
+    <div id="Home">
 
-    <div class="spaces">
+        <div id="contenido1">
+            <div id="imagen">
+                <img src="../../../assets/images/me.png">
+            </div>
+            <div id="space1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia error, ex aliquam accusantium ipsa numquam praesentium reiciendis corporis aliquid? Non vero quasi illum a at maxime tempora enim quae molestias?</p>
+            </div>
+        </div>
+
+    </div>
+    <!--SECCION DE HOME-->
+
+    <!--SECCION DE ABOUTME-->
+    <div id="AboutMe">
         space
         <div id="space2">space2</div>
     </div>
+    <!--SECCION DE ABOUTME-->
 
-    <div class="spaces">
+    <!--SECCION DE MYSERVICES-->
+    <div id="MyServices">
         space
         <div id="space3">space3</div>
     </div>
+    <!--SECCION DE MYSERVICES-->
 
-    <div class="spaces">
+    <!--SECCION DE CONOCIMIENTOS-->
+    <div id="Conocimientos">
         space
         <div id="space4">space4</div>
     </div>
+    <!--SECCION DE CONOCIMIENTOS-->
 
 </body>
